tools/noir-compile/errors.txt
   Compiling noir-compile v0.1.0 (/Users/yani/noir-go/tools/noir-compile)
warning: unused import: `rmp_serde::encode::to_vec`
 --> src/main.rs:4:5
  |
4 | use rmp_serde::encode::to_vec;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Deserialize` and `Serialize`
 --> src/main.rs:5:13
  |
5 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^

error[E0308]: arguments to this method are incorrect
    --> src/main.rs:28:9
     |
28   |       map.insert(
     |           ^^^^^^
29   |           "./main",
     |           -------- expected `String`, found `&str`
30   | /         "fn main() {
31   | |     let mut acc: u128 = 0;
32   | |     let n: u128 = 1_000_000;
...    |
39   | |     assert(acc == acc);
40   | | }",
     | |__- expected `String`, found `&str`
     |
help: the return type of this call is `&'static str` due to the type of the argument passed
    --> src/main.rs:28:5
     |
28   | /      map.insert(
29   | |          "./main",
30   | |/         "fn main() {
31   | ||     let mut acc: u128 = 0;
32   | ||     let n: u128 = 1_000_000;
...    ||
39   | ||     assert(acc == acc);
40   | || }",
     | ||__- this argument influences the return type of `insert`
41   | |      );
     | |______^
note: method defined here
    --> /Users/yani/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/src/rust/library/std/src/collections/hash/map.rs:1203:12
     |
1203 |     pub fn insert(&mut self, k: K, v: V) -> Option<V> {
     |            ^^^^^^
help: try using a conversion method
     |
29   |         "./main".to_string(),
     |                 ++++++++++++
help: try using a conversion method
     |
40   | }".to_string(),
     |   ++++++++++++

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
  --> src/main.rs:42:50
   |
9  | fn main() {
   | --------- this function should return `Result` or `Option` to accept `?`
...
42 |     let bytes: Vec<u8> = bincode::serialize(&map)?;
   |                                                  ^ cannot use the `?` operator in a function that returns `()`
   |
help: consider adding return type
   |
9  ~ fn main() -> Result<(), Box<dyn std::error::Error>> {
10 |     //println!("Hello, world!");
...
43 |     println!("Serialized bytes: {bytes:?}");
44 +     Ok(())
   |

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: `noir-compile` (bin "noir-compile") generated 2 warnings
error: could not compile `noir-compile` (bin "noir-compile") due to 2 previous errors; 2 warnings emitted
